# qwen3-asr

./: .env.example  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  build.sh  docker-compose-cpu.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  start.py
.github/workflows/: docker-build.yml
app/: __init__.py  bootstrap.py  main.py
app/api/v1/: __init__.py  asr.py  openai_compatible.py  websocket_asr.py
app/cli/: startup_tui.py
app/core/: config.py  device.py  exceptions.py  logging.py
app/models/: asr.py
app/services/: qwen3_websocket_asr.py  websocket_asr.py
app/services/asr/: audio_validation.py  manager.py  model_capabilities.py  model_plan.py  model_selection.py  models.json  offline_transcription_service.py  qwen3_engine.py  qwen3_mlx.py  qwen3_vllm.py  qwenasr_rust.py  validators.py
app/services/asr/engines/: __init__.py  base.py  funasr.py  global_models.py
app/services/asr/runtime/: __init__.py  local_pool.py  router.py
app/services/audio/: audio_service.py
app/utils/: __init__.py  audio.py  audio_filter.py  audio_splitter.py  boot_events.py  download_models.py  model_loader.py  speaker_diarizer.py  text_processing.py
docs/: MODEL_SETUP.md  README_zh.md  deployment.md  nearfield_filter.md  runtime_instruction.md
docs/TODO/: ENTROPY_REDUCTION_PLAN.md  PENDING_CUDA_VLLM_HANDOFF.md  X86_RUST_ALIGN_OPT_PLAN.md
environments/cpu/: pyproject.toml
scripts/: README.md  analyze_audio_rms.py  prepare-models.sh
scripts/benchmark/: README.md  __init__.py  run.py
scripts/benchmark/reporters/: markdown_reporter.py
scripts/docker/: entrypoint.sh
tests/: test_model_integrity.py  test_qwenasr_cpu_features.py
