[project]
name = "qwen3-asr-cpu-env"
version = "1.0.0"
description = "CPU runtime environment for qwen3-asr"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.128.0",
  "fastapi-offline==1.7.6",
  "uvicorn[standard]==0.40.0",
  "pydantic==2.12.0",
  "python-multipart==0.0.22",
  "funasr==1.3.1",
  "requests==2.32.5",
  "modelscope[framework]==1.34.0",
  "soundfile==0.13.1",
  "librosa==0.11.0",
  "textual>=0.79,<1",
  "websockets==16.0",
  "addict==2.4.0",
  "datasets==3.6.0",
  "scipy==1.15.3",
  "wetext==0.1.2",
  "python-dotenv==1.2.1",
  "huggingface_hub==0.34.0",
  "hdbscan==0.8.41",
  "loguru==0.7.2",
  "rich>=13.9,<14",
  "setuptools>=70.0.0,<81",
  "torch==2.3.1 ; sys_platform == 'linux' or sys_platform == 'darwin'",
  "torchaudio==2.3.1 ; sys_platform == 'linux' or sys_platform == 'darwin'",
  "transformers>=4.45,<4.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
